[package]
name = "meepers-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = "4.5"
css-color = "0.2"
futures = "0.3.32"
image = "0.25"
lazy_static = "1.5"
matrix-sdk = { version = "0.16", features = ["markdown"] }
mime = "0.3"
tokio = { version = "1.50", features = ["full"] }
