[package]
name = "meepers-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.5.60"
css-color = "0.2.8"
futures = "0.3.32"
image = "0.25.9"
lazy_static = "1.5.0"
matrix-sdk = { version = "0.16.0", features = ["markdown"] }
mime = "0.3.17"
tokio = { version = "1.50.0", features = ["full"] }
include_dir = "0.7.4"
serde = "1.0.228"
serde_json = "1.0.149"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = {version = "2.3.0", features = ["from-directory"] }
