[package]
name = "meepers-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = "4.6.1"
css-color = "0.2.8"
futures = "0.3.32"
image = "0.25.10"
lazy_static = "1.5.0"
matrix-sdk = { version = "0.18", default-features = false, features = ["markdown", "e2e-encryption"] }
mime = "0.3.17"
tokio = { version = "1.52.3", features = ["full"] }
include_dir = "0.7.4"
serde = "1.0.228"
serde_json = "1.0.150"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = {version = "2.3.0", features = ["from-directory"] }
reqwest = "0.13.4"
nest_struct = "0.5.5"
uom = "0.38.0"
